fixed some iPhone issues. Button is the wrong color and the screen is zoomed out

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,10 @@ h4 {
   margin: 1em;
 }
 
+button {
+  background-color: #EEE;
+}
+
 p {
   text-align: center;
   margin: 0;
